--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"coastal-junk-removal","version":"1.0.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"dotenv":"^16.5.0","express":"^4.18.2","express-session":"^1.18.1"}}
+{"name":"coastal-junk-removal","version":"1.0.0","main":"server.js","scripts":{"start":"node server.js"},"dependencies":{"dotenv":"^16.5.0","express":"^4.18.2","express-session":"^1.18.1","multer":"^1.4.5-lts.2"}}
