--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
+# Node environment
 .env
 node_modules/
+
+# Logs
 logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS/System files
 .DS_Store
+Thumbs.db
+
+# Editor folders
+.vscode/
+.idea/
+
+# Public uploads
+public/uploads/
+public/signatures/
+
+# Invoice data
+data/invoices.json
